--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -71,3 +71,35 @@
   color: #43a3e6;
   transition: .3s ease background;
 }
+
+@media only screen and (max-width: 890px) {
+  .login-container h1 {
+    top: 75px;
+  }
+
+  .login-container .loginx {
+    top: 85px;
+  }
+}
+
+@media only screen and (max-width: 600px) and (min-width: 350px) and (orientation: portrait) {
+  #nav ul .login a {
+    text-align: center;
+    width: 150px;
+    font-size: 1.4em;
+    background: #333;
+    border-bottom: 3px solid #c9c505;
+    position: absolute;
+    top: -147px;
+    left: 0%;
+  }
+
+  .cf .login {
+    position: absolute;
+    left: 60%;
+  }
+
+  .logoTitle {
+    display: none;
+  }
+}
